new Selecting method for machines/workers optimizing inflates and others 29 august 2014